# SimpleRasterizationEngine

./: CMakeLists.txt  MyProject  README.md  run_main.sh
assets/: 20mm_cube.stl  xyzCalibration_cube-converted-ASCII.stl
headers/: Lighting.h  Linear_Algebra_Utils.h  Projections.h  Rasterizer.h  STL_Handler.h  Scene.h  Transformation_Utils.h
source/: Lighting.c  Linear_Algebra_Utils.c  Projections.c  STL_Handler.c  Scene.c  Transformation_Utils.c  main.c
tests/: Linear_Algebra_Utils_Tests.c  STL_Handler_Tests.c  Scene_Tests.c  myprogram  run_valgrind.sh  valgrind-out.txt
